# burn-central-example

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  model.rs  training.rs
