[package]
name = "burn-central-example"
edition = "2024"
version = "0.1.0"

[dependencies]
burn = {  git = "https://github.com/tracel-ai/burn", rev = "cc8f6d44d39b6192cd233c92f6e49134d81ab05f" , features = [
    "train",
    "vision",
    "metrics",
    "std",
    "fusion",
    "ndarray",
    "autotune",
], default-features = false }
burn-central = { git = "https://github.com/tracel-ai/burn-central", branch = "artifact-error-message" }


# Serialization
log = "0.4.29"
rand = "0.9.2"
serde_json = "1"
serde = {version = "1.0.228", features = ["std", "derive"]}
